src/app/modules/login/login.page.scss
form {
  ion-button {
    margin-top: 1rem !important;
  }

  ion-input {
    font-size: 14px;
  }
}

.login-content {
  margin: 0 auto;
  padding: 2rem;
  max-width: 30rem;

  .apple-login {
    margin-top: 0.5rem;
  }

}

.horizontal-or {
  margin-top: 1rem;
  margin-bottom: 1rem;

  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;

  hr {
    margin: 0;
    height: 1px;
    background-color: var(--ion-color-medium);
    opacity: 25%;
    width: 4rem;
  }

  span {
    color: var(--ion-color-medium);
    margin-left: 1rem;
    margin-right: 1rem;
  }
}

.small-text-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: .75rem;
}

